--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places"></script>
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxzkjOQ70HPlSwjSQD6VjAowEzEQFSM40&libraries=places"></script>
 </head>
 
 <body>
