--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,15 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-  <meta charset="utf-8">
-  <title>Frontend</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxzkjOQ70HPlSwjSQD6VjAowEzEQFSM40&libraries=places"></script>
+<meta charset="utf-8">
+<title>NooR Execution Consulting</title>
+<base href="/">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description"
+  content="Nourrir l'idée, Exécuter la vision, Créer l'impact. Premier pas Regardez Video. Innovation. Perfection. Production. Contrôle.">
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+<script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxzkjOQ70HPlSwjSQD6VjAowEzEQFSM40&libraries=places"></script>
 </head>
 
 <body>
